Added links to the email on index page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body>
     <h1>Team 27</h1>
-    <p>Member: Astha Sanjaykumar Bhalodiya (abhalod@ncsu.edu)</p>
-    <p>Member: Abhishek Rao (arao23@ncsu.edu)</p>
-    <p>Member: Umang Sureshbhai Diyora (udiyora@ncsu.edu)</p>
+    <p>Member: Astha Sanjaykumar Bhalodiya <a href="mailto:abhalod@ncsu.edu">abhalod@ncsu.edu</a></p>
+    <p>Member: Abhishek Rao <a href="mailto:arao23@ncsu.edu">arao23@ncsu.edu</a></p>
+    <p>Member: Umang Sureshbhai Diyora <a href="mailto:udiyora@ncsu.edu">udiyora@ncsu.edu</a></p>
 </body>
 
 </html>
