Added the new footer in master

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Member: Abhishek Rao <a href="mailto:arao23@ncsu.edu">arao23@ncsu.edu</a></p>
     <p>Member: Umang Sureshbhai Diyora <a href="mailto:udiyora@ncsu.edu">udiyora@ncsu.edu</a></p>
 </body>
+<footer><p>Team 27</p></footer>
 
 </html>
