--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>Member: Astha Sanjaykumar Bhalodiya <a href="mailto:abhalod@ncsu.edu">abhalod@ncsu.edu</a></p>
     <p>Member: Abhishek Rao <a href="mailto:arao23@ncsu.edu">arao23@ncsu.edu</a></p>
     <p>Member: Umang Sureshbhai Diyora <a href="mailto:udiyora@ncsu.edu">udiyora@ncsu.edu</a></p>
+
+    <p>These is the new commit. These will be removed</p>
 </body>
 <footer>Team 27 © 2024</footer>
 
