--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Team 27</h1>
+    <h1>Team 27 - Git Set Go Pack</h1>
     <p>Member: Astha Sanjaykumar Bhalodiya <a href="mailto:abhalod@ncsu.edu">abhalod@ncsu.edu</a></p>
     <p>Member: Abhishek Rao <a href="mailto:arao23@ncsu.edu">arao23@ncsu.edu</a></p>
     <p>Member: Umang Sureshbhai Diyora <a href="mailto:udiyora@ncsu.edu">udiyora@ncsu.edu</a></p>
