Add different footer content in main branch

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>Member: Abhishek Rao <a href="mailto:arao23@ncsu.edu">arao23@ncsu.edu</a></p>
     <p>Member: Umang Sureshbhai Diyora <a href="mailto:udiyora@ncsu.edu">udiyora@ncsu.edu</a></p>
 </body>
-<footer>Team 27 © 2024</footer>
+<footer>
+    <p>Team Project - 2024 Version</p>
+</footer>
 
 </html>
