--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>Member: Abhishek Rao <a href="mailto:arao23@ncsu.edu">arao23@ncsu.edu</a></p>
     <p>Member: Umang Sureshbhai Diyora <a href="mailto:udiyora@ncsu.edu">udiyora@ncsu.edu</a></p>
 </body>
-<footer>Team 27 © 2024</footer>
+<footer>Team 27 © 2024 :  clash of arao23</footer>
 
 </html>
